--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,10 @@
 /*
  * The Mooks
- * 2017
+ * 2019
  */
 
 
 body, html {
-    width: 100%;
     height: 100%;
 }
 
@@ -107,22 +106,8 @@ ul {
 }
 
 /* navigation section */
-.navbar-default {
+.navbar {
 	background: #BF0103;
-	margin-bottom: 0;
-	border: none;
-}
-
-.navbar-brand {
-	background: url(../images/the-mooks-logo.jpg) no-repeat top left;
-	height: 91px;
-	width: 500px;
-}
-
-@media (max-width: 767px) {
-	.navbar-brand {
-	background: url(../images/the-mooks-logo-sm.jpg) no-repeat top left;
-	}
 }
 
 .no-gutter>[class*=col-] {
@@ -134,20 +119,11 @@ ul {
     padding: 30px 0;
 }
 
-.vcenter {
-    display: table-cell;
-    vertical-align: middle;
-}
-
 /* intro section */
 .intro {
-    padding-top: 100px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
-    padding-bottom: ;
+    padding-top: 80px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
     background: #333333;
-    background-size: ;
 	height: 100%;
-	width: 100%;
-	display: table;
 }
 
 .intro p {
@@ -157,7 +133,7 @@ ul {
 	line-height: 1;
 }
 
-.intro .word{
+.intro .word {
 	font-weight: bold;
 	margin-bottom: 0;
 	display: inline;
@@ -196,33 +172,26 @@ ul {
 /* content sections */
 
 .content-section-1 {
-	background: url(../images/wallpaper.png) repeat;
+	background: grey;
 }
 
-
-
-.content-section-1 .panel {
-	background: ;
-	background-color: transparent;
-	border: none;
-	border-radius: 0px;
-	box-shadow: none;
-	padding: ;
-	color: ;
-	margin:	;
-	min-height: 520px;
-	display: ;
-}
-
-.content-section-1 .p-info {
-	background-color: #ffffff;
-}
-
-@media (max-width: 768px){
-	.content-section-1 .panel {
-		min-height: 300px;
+@media (min-width: 1200px){
+	.content-section-1 .card-deck {
+		width: 75%;
 	}
 }
+
+
+.content-section-1 .poster {
+	background: transparent;
+	border: none;
+}
+
+.content-section-1 .blurb, .content-section-1 .info  {
+	background-color: rgba(255,255,255,.95);
+}
+
+
 
 .content-section-1 img {
 	margin: 0 auto;
@@ -252,7 +221,6 @@ ul {
 
 footer {
 	background-color: #BF0103;
-	padding: 20px 0;
     bottom: 0;
 }
 
